Add tracing namespace.

--- a/namespaces/create-namespaces.yaml
+++ b/namespaces/create-namespaces.yaml
@@ -32,4 +32,10 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: tracing
+
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: visualization
