--- a/volumes/create-persistent-volume.yaml
+++ b/volumes/create-persistent-volume.yaml
@@ -90,3 +90,28 @@ spec:
           operator: In
           values:
           - observability-vm-1
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: grafana-pv-1
+spec:
+  capacity:
+    storage: 5Gi
+  accessModes:
+  - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  local:
+    path: /opt/grafana
+  claimRef:
+    namespace: visualization
+    name: grafana
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - observability-vm-1
