Add namespace option in yaml.

--- a/mesaurement-tools/collectd/collectd-pod.yaml
+++ b/mesaurement-tools/collectd/collectd-pod.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: collectd-node-metrics
+  namespace: measurement
   labels:
     environment: production
     app: collectd-node-metrics-svc
