--- a/tools/collectd/collectd.conf
+++ b/tools/collectd/collectd.conf
@@ -2,6 +2,14 @@ Hostname "HOSTNAME"
 FQDNLookup false
 Interval     10
 
+LoadPlugin logfile
+<Plugin logfile>
+    LogLevel info
+    File STDOUT
+    Timestamp true
+    PrintSeverity false
+</Plugin>
+
 LoadPlugin cpu
 #LoadPlugin df
 LoadPlugin disk
@@ -10,6 +18,8 @@ LoadPlugin load
 LoadPlugin memory
 #LoadPlugin network
 LoadPlugin swap
+
+LoadPlugin match_regex
 
 LoadPlugin write_kafka
 
@@ -20,19 +30,6 @@ LoadPlugin write_kafka
 <Plugin memory>
 	ValuesAbsolute true
 	ValuesPercentage false
-</Plugin>
-
-<Plugin df>
-#	Device "/dev/hda1"
-#	Device "192.168.0.2:/mnt/nfs"
-#	MountPoint "/home"
-#	FSType "ext3"
-#	IgnoreSelected true
-#	LogOnce false
-#	ReportByDevice true
-#	ReportInodes false
-#	ValuesAbsolute true
-#	ValuesPercentage false
 </Plugin>
 
 <Plugin disk>
@@ -72,3 +69,33 @@ LoadPlugin write_kafka
      Format JSON
    </Topic>
 </Plugin>
+# <Plugin "write_kafka/cpu-usage">
+#    Property "metadata.broker.list" "bitnami-kafka-0.bitnami-kafka-headless.delivery.svc.cluster.local:9092"
+#    <Topic "collectd-cpu-metrics">
+#      Format JSON
+#    </Topic>
+# </Plugin>
+
+# PostCacheChain "PostCache"
+# <Chain "PostCache">
+#     <Rule "load_rule">
+#       <Match "regex">
+#         Plugin "(load)"
+#       </Match>
+#       <Target "write">
+#         Plugin "write_kafka/cpu-load"
+#       </Target>
+#       <Target "return">
+#       </Target>
+#     </Rule>
+#     <Rule "cpu_rule">
+#       <Match "regex">
+#         Plugin "(cpu)"
+#       </Match>
+#       <Target "write">
+#         Plugin "write_kafka/cpu-usage"
+#       </Target>
+#       <Target "return">
+#       </Target>
+#     </Rule>
+# </Chain>
