--- a/tools/telegraf/telegraf-deployment.yaml
+++ b/tools/telegraf/telegraf-deployment.yaml
@@ -29,6 +29,10 @@ data:
        method = "measurement"
        separator = "_"
 
+   [[outputs.prometheus_client]]
+         ## Address to listen on.
+         listen = ":9126"
+
    [[inputs.cpu]]
      percpu = true
      totalcpu = true
@@ -50,7 +54,9 @@ data:
    [[inputs.system]]
    [[inputs.docker]]
      endpoint = "unix:///var/run/docker.sock"
-     perdevice_include = ["cpu"]
+     perdevice = true
+     total = true
+     perdevice_include = ["cpu", "blkio", "network"]
      total_include = ["cpu", "blkio", "network"]
 #   [[inputs.kubernetes]]
 #     url = "https://172.16.23.1:6443"
