Add an mqtt example use case.

--- a/tools-helm-configs/prometheus-values.yaml
+++ b/tools-helm-configs/prometheus-values.yaml
@@ -1345,6 +1345,11 @@ serverFiles:
           - targets:
             - localhost:9090
 
+      - job_name: 'telegraf'
+        scrape_interval: 5s
+        static_configs:
+          - targets: [ '10.244.3.88:9126' ]
+
       # A scrape configuration for running Prometheus on a Kubernetes cluster.
       # This uses separate scrape configs for cluster components (i.e. API server, node)
       # and services to allow each to use different authentication configs.
