Use just two namespaces and add kafka installation.

--- a/namespaces/create-namespaces.yaml
+++ b/namespaces/create-namespaces.yaml
@@ -8,6 +8,12 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: monitoring
+
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: delivery
 
 ---
