--- a/tools/kafka-consumers/node-metrics/kc-nm-pod.yaml
+++ b/tools/kafka-consumers/node-metrics/kc-nm-pod.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: kc-nm-pod
-  namespace: delivery
+  namespace: monitoring
   labels:
     environment: production
     app: kc-nm-pod
