--- a/tools-helm-configs/loki-values.yaml
+++ b/tools-helm-configs/loki-values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: grafana/loki
-  tag: 2.3.0
+  tag: 2.4.1
   pullPolicy: IfNotPresent
 
   ## Optionally specify an array of imagePullSecrets.
@@ -44,12 +44,15 @@ tracing:
   jaegerAgentHost:
 
 config:
+  # existingSecret:
   auth_enabled: false
   ingester:
     chunk_idle_period: 3m
     chunk_block_size: 262144
     chunk_retain_period: 1m
     max_transfer_retries: 0
+    wal:
+      dir: /data/loki/wal
     lifecycler:
       ring:
         kvstore:
@@ -137,13 +140,13 @@ nodeSelector:
 ## - create a pv which above 10Gi and has same namespace with loki
 ## - keep storageClassName same with below setting
 persistence:
-  enabled: true
+  enabled: false
   accessModes:
   - ReadWriteOnce
   size: 10Gi
   annotations: {}
-  #selector:
-  #  matchLabels:
+  # selector:
+  #   matchLabels:
   #     app.kubernetes.io/name: loki
   # subPath: ""
   # existingClaim:
