Change Telegraf collector parameters.

--- a/tools/telegraf/telegraf-serviceaccount.yaml
+++ b/tools/telegraf/telegraf-serviceaccount.yaml
@@ -12,7 +12,7 @@ metadata:
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: influx-stats-viewer
+  name: k8s-stats-viewer
   labels:
     app.kubernetes.io/instance: telegraf
     app.kubernetes.io/name: telegraf
@@ -30,7 +30,7 @@ rules:
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: influx:telegraf
+  name: k8s:telegraf
 aggregationRule:
   clusterRoleSelectors:
     - matchLabels:
@@ -43,7 +43,7 @@ rules: [] # Rules are automatically filled in by the controller manager.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: influx-telegraf-viewer
+  name: k8s-telegraf-viewer
   labels:
     app.kubernetes.io/instance: telegraf
     app.kubernetes.io/name: telegraf
@@ -54,18 +54,4 @@ subjects:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: influx:telegraf
-
-#---
-#kind: ClusterRoleBinding
-#apiVersion: rbac.authorization.k8s.io/v1
-#metadata:
-#  name: metric-scanner-kubelet-api-admin
-#subjects:
-#- kind: ServiceAccount
-#  name: telegraf
-#  namespace: measurement
-#roleRef:
-#  kind: ClusterRole
-#  name: system:kubelet-api-admin
-#  apiGroup: rbac.authorization.k8s.io
+  name: k8s:telegraf
