Change restart policy to Always.

--- a/tools/kafka-consumers/kc-nm-pod.yaml
+++ b/tools/kafka-consumers/kc-nm-pod.yaml
@@ -12,6 +12,6 @@ spec:
   - name: kc-nm-container
     image: usman476/kafka-consumer-metrics:latest
     imagePullPolicy: "IfNotPresent"
-  restartPolicy: OnFailure
+  restartPolicy: Always
   nodeSelector:
     kubernetes.io/hostname: observability-vm-1
