--- a/demo-apps/mqtt/subscriber/mqtt-subscriber-pod.yaml
+++ b/demo-apps/mqtt/subscriber/mqtt-subscriber-pod.yaml
@@ -2,16 +2,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: mqtt-producer-pod
+  name: mqtt-subscriber-pod
   namespace: uc0
   labels:
     environment: production
-    app: mqtt-producer-pod
+    app: mqtt-subscriber-pod
 spec:
   containers:
-  - name: mqtt-producer-container
-    image: usman476/mqtt-producer:latest
+  - name: mqtt-subscriber-container
+    image: usman476/mqtt-subscriber:latest
     imagePullPolicy: "IfNotPresent"
   restartPolicy: Always
   nodeSelector:
-    kubernetes.io/hostname: worker-vm-1
+    kubernetes.io/hostname: worker-vm-2
