Add dependencies via requirements.txt

--- a/demo-apps/mqtt/subscriber/Dockerfile
+++ b/demo-apps/mqtt/subscriber/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:latest
+FROM python:alpine3.15
 
 ENV MQTT_BROKER="10.244.2.119"
 ENV KAFKA_BROKER="bitnami-kafka-0.bitnami-kafka-headless.uc0.svc.cluster.local:9092"
@@ -6,10 +6,11 @@ ENV KAFKA_BROKER="bitnami-kafka-0.bitnami-kafka-headless.uc0.svc.cluster.local:9
 ARG Pathdir="/mqtt"
 
 RUN mkdir $Pathdir
-RUN pip3 install paho-mqtt
-RUN pip3 install kafka-python
 
 COPY subscribe.py $Pathdir
+COPY requirements.txt .
+
+RUN pip3 install -r requirements.txt
 
 WORKDIR $Pathdir
 
