--- a/demo-apps/mqtt/publisher/Dockerfile
+++ b/demo-apps/mqtt/publisher/Dockerfile
@@ -3,6 +3,13 @@ FROM python:alpine3.15
 ENV SENSORS="1"
 ENV MESSAGE_DELAY="1"
 ENV MQTT_BROKER="10.244.2.119"
+ENV MQTT_BROKER_PORT="1883"
+ENV MQTT_TOPIC="mqtt/temperature"
+ENV START_VALUE="1"
+ENV END_VALUE="10"
+ENV VALUE_TYPE="integer"
+ENV INVALID_VALUE_OCCURRENCE="10"
+ENV INVALID_VALUE="99"
 
 ARG Pathdir="/mqtt"
 
