--- a/demo-apps/mqtt/analyzer/temp-analyzer-pod.yaml
+++ b/demo-apps/mqtt/analyzer/temp-analyzer-pod.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   containers:
   - name: t-a-container
-    image: usman476/fust-temp-analyzer:latest
+    image: usman476/mqtt-kafka-faust:latest
     env:
     - name: MQTT_BROKER
       value: "mqtt-mosquitto.uc0.svc.cluster.local"
@@ -21,7 +21,9 @@ spec:
     - name: KAFKA_BROKER
       value: "bitnami-kafka-0.bitnami-kafka-headless.uc0.svc.cluster.local:9092"
     - name: KAFKA_TOPIC
-      value: "temperature"
+      value: "temperature-readings"
+    command: ["python3"]
+    args: ["temp-analyzer.py", "worker", "-l", "info"]
     imagePullPolicy: "IfNotPresent"
     volumeMounts:
     - mountPath: /analyzer
