--- a/tools/telegraf/telegraf-serviceaccount.yaml
+++ b/tools/telegraf/telegraf-serviceaccount.yaml
@@ -8,6 +8,15 @@ metadata:
     app.kubernetes.io/name: telegraf
 
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: telegraf-measurement-secret
+  annotations:
+    kubernetes.io/service-account.name: telegraf
+type: kubernetes.io/service-account-token
+
+---
 # kubernetes_plugin: Give access to stats endpoints
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
