Remove selected devices from collected metrics.

--- a/tools/telegraf/telegraf-ds.yaml
+++ b/tools/telegraf/telegraf-ds.yaml
@@ -39,8 +39,9 @@ data:
      collect_cpu_time = false
      report_active = false
    [[inputs.disk]]
-     ignore_fs = ["tmpfs", "devtmpfs", "devfs"]
+     ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs", "loop*"]
    [[inputs.diskio]]
+     devices = ["sda", "sdb", "sdc"]
    [[inputs.kernel]]
    [[inputs.mem]]
    [[inputs.dmcache]]
