Enable NodePort for data access outside the cluster.

--- a/tools-helm-configs/elasticsearch-values.yaml
+++ b/tools-helm-configs/elasticsearch-values.yaml
@@ -189,8 +189,8 @@ service:
   enabled: true
   labels: {}
   labelsHeadless: {}
-  type: ClusterIP
-  nodePort: ""
+  type: NodePort
+  nodePort: "30010"
   annotations: {}
   httpPortName: http
   transportPortName: transport
