Enable persistence for elasticsearch.

--- a/tools-helm-configs/elasticsearch-values.yaml
+++ b/tools-helm-configs/elasticsearch-values.yaml
@@ -99,7 +99,7 @@ volumeClaimTemplate:
   accessModes: ["ReadWriteOnce"]
   resources:
     requests:
-      storage: 10Gi
+      storage: 8Gi
 
 rbac:
   create: false
@@ -127,7 +127,7 @@ podSecurityPolicy:
       - emptyDir
 
 persistence:
-  enabled: false
+  enabled: true
   labels:
     # Add default labels for the volumeClaimTemplate of the StatefulSet
     enabled: false
