--- a/persistent-volumes/create-persistent-volume.yaml
+++ b/persistent-volumes/create-persistent-volume.yaml
@@ -70,6 +70,31 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
+  name: elasticsearch-pv-1
+spec:
+  capacity:
+    storage: 10Gi
+  accessModes:
+  - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  local:
+    path: /opt/elasticsearch
+  claimRef:
+    namespace: monitoring
+    name: es-master-es-master-0
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - observability-vm-1
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
   name: loki-pv-1
 spec:
   capacity:
