Update telegraf service account.

--- a/tools/telegraf/telegraf-serviceaccount.yaml
+++ b/tools/telegraf/telegraf-serviceaccount.yaml
@@ -33,6 +33,9 @@ rules:
   - apiGroups: [""]
     resources: ["nodes/proxy", "nodes/stats"]
     verbs: ["get", "list", "watch"]
+  - apiGroups: [""]
+    resources: ["persistentvolumes", "nodes"]
+    verbs: ["get", "list"]
 
 ---
 # Define global role with the default system:aggregate-to-view cluster role and the two rules we just created
