--- a/tools-helm-configs/kibana-values.yaml
+++ b/tools-helm-configs/kibana-values.yaml
@@ -1,5 +1,5 @@
 ---
-elasticsearchHosts: "http://10.152.183.134:9200"
+elasticsearchHosts: "http://es-master-0.es-master-headless.monitoring.svc.cluster.local:9200"
 
 replicas: 1
 
@@ -35,20 +35,21 @@ hostAliases: []
 #  - "bar.local"
 
 image: "docker.elastic.co/kibana/kibana"
-imageTag: "7.13.4"
+imageTag: "7.17.1"
 imagePullPolicy: "IfNotPresent"
 
 # additionals labels
 labels: {}
 
-podAnnotations:
-  {}
-  # iam.amazonaws.com/role: es-cluster
+annotations: {}
+
+podAnnotations: {}
+# iam.amazonaws.com/role: es-cluster
 
 resources:
   requests:
-    cpu: "1000m"
-    memory: "1Gi"
+    cpu: "500m"
+    memory: "512Mi"
   limits:
     cpu: "1000m"
     memory: "1Gi"
@@ -81,6 +82,9 @@ securityContext:
 
 serviceAccount: ""
 
+# Whether or not to automount the service account token in the pod. Normally, Kibana does not need this
+automountToken: true
+
 # This is the PriorityClass settings as defined in
 # https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/#priorityclass
 priorityClassName: ""
@@ -98,12 +102,13 @@ extraVolumeMounts:
   #   mountPath: /usr/share/extras
   #   readOnly: true
   #
-extraContainers: ""
+
+extraContainers: []
 # - name: dummy-init
 #   image: busybox
 #   command: ['echo', 'hey']
 
-extraInitContainers: ""
+extraInitContainers: []
 # - name: dummy-init
 #   image: busybox
 #   command: ['echo', 'hey']
@@ -112,10 +117,10 @@ updateStrategy:
   type: "Recreate"
 
 service:
-  type: NodePort
+  type: ClusterIP
   loadBalancerIP: ""
   port: 5601
-  nodePort: "30001"
+  nodePort: ""
   labels: {}
   annotations:
     {}
@@ -131,15 +136,16 @@ service:
 
 ingress:
   enabled: false
-  annotations:
-    {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  className: "nginx"
+  pathtype: ImplementationSpecific
+  annotations: {}
+  # kubernetes.io/ingress.class: nginx
+  # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: kibana-example.local
       paths:
         - path: /
-  tls: []
+  #tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
@@ -152,7 +158,8 @@ readinessProbe:
   timeoutSeconds: 5
 
 imagePullSecrets: []
-nodeSelector: {}
+nodeSelector:
+  kubernetes.io/hostname: observability-vm-1
 tolerations: []
 affinity: {}
 
