Add namespace for secret creation.

--- a/tools/telegraf/telegraf-serviceaccount.yaml
+++ b/tools/telegraf/telegraf-serviceaccount.yaml
@@ -12,6 +12,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: telegraf-measurement-secret
+  namespace: measurement
   annotations:
     kubernetes.io/service-account.name: telegraf
 type: kubernetes.io/service-account-token
