--- a/kubernetes/provision_worker_nodes.yaml
+++ b/kubernetes/provision_worker_nodes.yaml
@@ -1,13 +1,13 @@
 ---
-- hosts: control_plane
+- hosts: master
   become: yes
   gather_facts: false
   tasks:
-    - name: get join command
+    - name: Get join command
       shell: kubeadm token create --print-join-command
       register: join_command_raw
 
-    - name: set join command
+    - name: Set join command
       set_fact:
         join_command: "{{ join_command_raw.stdout_lines[0] }}"
 
@@ -15,8 +15,8 @@
 - hosts: workers
   become: yes
   tasks:
-    - name: join cluster
-      shell: "{{ hostvars['control1'].join_command }} >> node_joined.txt"
+    - name: Join cluster
+      shell: "{{ hostvars['master1'].join_command }} >> node_joined.txt"
       args:
         chdir: $HOME
         creates: node_joined.txt
